--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -5,11 +5,16 @@ body {
 	min-height: 100%;
 	min-width: 100%;
 	font-family: 'Roboto', sans-serif;
+	font-size: 14px !important;
 }
 
 .App {
-	padding: 20px;
+	padding: 30px;
 	min-width: 100%;
-
+	background-color: #ecebfe;
 	min-height: 100vh;
+}
+
+.menuItem {
+	background: #028360 !important;
 }
