--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import 'react-big-calendar/lib/css/react-big-calendar.css';
 
 html,
 body {
@@ -16,5 +17,5 @@ body {
 }
 
 .menuItem {
-	background: #028360 !important;
+	background: #5db7ad !important;
 }
