--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -3,18 +3,17 @@
 
 html,
 body {
-	min-height: 100%;
-	min-width: 100%;
 	font-family: 'Roboto', sans-serif;
 	font-size: 14px !important;
+	background-color: #ecebfe !important;
 }
 
-.App {
+/* .App {
 	padding: 30px;
 	min-width: 100%;
-	background-color: #ecebfe;
 	min-height: 100vh;
-}
+	background-color: blue;
+} */
 
 .menuItem {
 	background: #5db7ad !important;
