--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -1,26 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 @import 'react-big-calendar/lib/css/react-big-calendar.css';
 @import '~normalize.css';
-@import '~@blueprintjs/core/lib/css/blueprint.css';
-@import '~@blueprintjs/icons/lib/css/blueprint-icons.css';
-html,
-body {
+@import '~@blueprintjs/popover2/lib/css/blueprint-popover2.css';
+@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css');
+@import 'https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css';
+html {
   font-family: 'Poppins', sans-serif !important;
   font-size: 14px !important;
-  padding: 20px;
-  background-color: #d0dfff;
-  border-radius: 0.28571429rem;
-  height: auto !important;
+
   color: #2c2745 !important;
+  padding: 20px;
 }
 
-.menuItem {
-  background: #fff !important;
-  border: 0 !important;
+body {
+  background: #d0dfff !important;
 }
 
-.ui .grid > table {
-  padding: 0 !important;
+.bg-white {
+  background: white !important;
+}
+
+.global-br {
+  border-radius: 0.28571429rem;
+}
+
+.cursor-pointer {
+  cursor: pointer !important;
+}
+
+a {
+  text-decoration: none !important;
+  color: #2c2745 !important;
 }
 
 th,
@@ -30,14 +40,10 @@ td {
   color: #2c2745 !important;
 }
 
-button {
-  font-family: 'Poppins', sans-serif !important;
+.offcanvas {
+  z-index: 1055 !important;
 }
 
-a {
-  font-family: 'Poppins', sans-serif !important;
-}
-
-.celled {
-  /* background-color: red !important; */
+input {
+  margin: 0 !important;
 }
